// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Display/Icon Text Color 1`] = `
Array [
  <div
    className="sc-dIsUp MeUTz"
  >
    <span
      className="sc-iqAclL eXekar"
      color="warning"
    >
      <svg
        height="16"
        viewBox="0 0 17 16"
        width="17"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M8 5.996c.553 0 1 .447 1 1v.998c0 .553-.447 1-1 1-.552 0-1-.447-1-1v-.998c0-.553.448-1 1-1M8 9.895c.607 0 1.101.492 1.101 1.1 0 .607-.494 1.1-1.1 1.1-.608 0-1.1-.493-1.1-1.1 0-.608.492-1.1 1.1-1.1"
          />
          <path
            className="icon-color"
            d="M8 0c-.383 0-.766.193-.975.581L.133 13.373c-.396.734.138 1.624.974 1.624h13.786c.836 0 1.37-.89.974-1.624L8.974.581C8.766.193 8.384 0 8 0m0 3l5.386 9.997H2.613L8 3"
          />
        </g>
      </svg>
    </span>
    <p
      className="sc-crzoAE fKYsQH"
      color="error"
      size="xl"
    >
      Alert message
    </p>
  </div>,
  <div
    className="sc-bqGGPW dloCGY"
  >
    <p
      className="sc-crzoAE UIyUn"
      color="text"
      size="xl"
    >
      External link
    </p>
    <span
      className="sc-iqAclL csKvIw"
      color="primary"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M13 13v-2c0-.552.448-1 1-1s1 .448 1 1v2c0 1.105-.895 2-2 2H3c-1.105 0-2-.895-2-2V3c0-1.105.895-2 2-2h2c.552 0 1 .448 1 1s-.448 1-1 1H3v10h10z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M11.586 3H9c-.552 0-1-.448-1-1s.448-1 1-1h5c.276 0 .526.112.707.293.181.18.293.43.293.707v5c0 .552-.448 1-1 1s-1-.448-1-1V4.414l-6.243 6.243c-.39.39-1.023.39-1.414 0-.39-.39-.39-1.024 0-1.414L11.586 3z"
          />
        </g>
      </svg>
    </span>
  </div>,
]
`;

exports[`Storyshots Data Display/Icon Text Icon Margin 1`] = `
Array [
  <div
    className="sc-dIsUp lmaRco"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
          />
        </g>
      </svg>
    </span>
    <p
      className="sc-crzoAE fwaroE"
      size="md"
    >
      Some text
    </p>
  </div>,
  <div
    className="sc-bqGGPW bMalYr"
  >
    <p
      className="sc-crzoAE UIyUn"
      size="xl"
    >
      Some text
    </p>
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
          />
        </g>
      </svg>
    </span>
  </div>,
]
`;

exports[`Storyshots Data Display/Icon Text Icon Position 1`] = `
Array [
  <div
    className="sc-bqGGPW btTmJG"
  >
    <p
      className="sc-crzoAE hzFUtR"
      size="sm"
    >
      Some text
    </p>
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M8 15c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm0-2c-2.761 0-5-2.239-5-5s2.239-5 5-5 5 2.239 5 5-2.239 5-5 5z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M9 7h2c.552 0 1 .448 1 1s-.448 1-1 1H9v2c0 .552-.448 1-1 1s-1-.448-1-1V9H5c-.552 0-1-.448-1-1s.448-1 1-1h2V5c0-.552.448-1 1-1s1 .448 1 1v2z"
          />
        </g>
      </svg>
    </span>
  </div>,
  <div
    className="sc-bqGGPW btTmJG"
  >
    <p
      className="sc-crzoAE UIyUn"
      size="xl"
    >
      Some text
    </p>
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M8 15c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm0-2c-2.761 0-5-2.239-5-5s2.239-5 5-5 5 2.239 5 5-2.239 5-5 5z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M9 7h2c.552 0 1 .448 1 1s-.448 1-1 1H9v2c0 .552-.448 1-1 1s-1-.448-1-1V9H5c-.552 0-1-.448-1-1s.448-1 1-1h2V5c0-.552.448-1 1-1s1 .448 1 1v2z"
          />
        </g>
      </svg>
    </span>
  </div>,
  <div
    className="sc-bqGGPW btTmJG"
  >
    <p
      className="sc-crzoAE hzFUtR"
      size="sm"
    >
      Some text
    </p>
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
          />
        </g>
      </svg>
    </span>
  </div>,
  <div
    className="sc-bqGGPW btTmJG"
  >
    <p
      className="sc-crzoAE UIyUn"
      size="xl"
    >
      Some text
    </p>
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
          />
        </g>
      </svg>
    </span>
  </div>,
]
`;

exports[`Storyshots Data Display/Icon Text Sizes 1`] = `
Array [
  <div
    className="sc-dIsUp jJoLmt"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M8 15c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm0-2c-2.761 0-5-2.239-5-5s2.239-5 5-5 5 2.239 5 5-2.239 5-5 5z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M9 7h2c.552 0 1 .448 1 1s-.448 1-1 1H9v2c0 .552-.448 1-1 1s-1-.448-1-1V9H5c-.552 0-1-.448-1-1s.448-1 1-1h2V5c0-.552.448-1 1-1s1 .448 1 1v2z"
          />
        </g>
      </svg>
    </span>
    <p
      className="sc-crzoAE hzFUtR"
      size="sm"
    >
      Some text
    </p>
  </div>,
  <div
    className="sc-dIsUp jJoLmt"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H16V16H0z"
          />
          <path
            className="icon-color"
            d="M8 15c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm0-2c-2.761 0-5-2.239-5-5s2.239-5 5-5 5 2.239 5 5-2.239 5-5 5z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M9 7h2c.552 0 1 .448 1 1s-.448 1-1 1H9v2c0 .552-.448 1-1 1s-1-.448-1-1V9H5c-.552 0-1-.448-1-1s.448-1 1-1h2V5c0-.552.448-1 1-1s1 .448 1 1v2z"
          />
        </g>
      </svg>
    </span>
    <p
      className="sc-crzoAE UIyUn"
      size="xl"
    >
      Some text
    </p>
  </div>,
  <div
    className="sc-dIsUp jJoLmt"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
          />
        </g>
      </svg>
    </span>
    <p
      className="sc-crzoAE hzFUtR"
      size="sm"
    >
      Some text
    </p>
  </div>,
  <div
    className="sc-dIsUp jJoLmt"
  >
    <span
      className="sc-iqAclL hWlKVA"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0H24V24H0z"
          />
          <path
            className="icon-color"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-2c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"
            fillRule="nonzero"
          />
          <path
            className="icon-color"
            d="M13 11h3c.552 0 1 .448 1 1s-.448 1-1 1h-3v3c0 .552-.448 1-1 1s-1-.448-1-1v-3H8c-.552 0-1-.448-1-1s.448-1 1-1h3V8c0-.552.448-1 1-1s1 .448 1 1v3z"
          />
        </g>
      </svg>
    </span>
    <p
      className="sc-crzoAE UIyUn"
      size="xl"
    >
      Some text
    </p>
  </div>,
]
`;
